# decentraveller

./: .gitignore  .gitignore~  App.tsx  Makefile  README.md  app.json  check_status.sh  clean.sh  docker-compose-tests.yml  docker-compose.yml  metro.config.js  package-lock.json  package.json
blockchain/: package-lock.json  package.json
config/: Providers.tsx  globalVariables.tsx
decentraveller-api/: .gitignore  Dockerfile  geocoding.env  pyproject.toml
decentraveller-api/web-api/: logging.conf  pyproject.toml  requirements.txt
decentraveller-api/web-api/src/: app.py  deps.py
decentraveller-api/web-api/src/api_models/: bulk_results.py  geocoding.py  place.py  place_category.py  profile.py  review.py  rule.py  user_role.py
decentraveller-api/web-api/src/assets/avatars/: main.py
decentraveller-api/web-api/src/database/: session.py
decentraveller-api/web-api/src/dependencies/: __init__.py  avatar_generator.py  blockchain_adapter.py  config.py  geocoding_api.py  indexer_auth.py  ipfs_controller.py  ipfs_service.py  ml_services.py  push_notification_adapter.py  relational_database.py  vector_database.py
decentraveller-api/web-api/src/loaders/: config.py  decentraveller_abi.json  initial_rules_loader.py
decentraveller-api/web-api/src/orms/: image.py  place.py  profile.py  review.py  review_image.py  rule.py
decentraveller-api/web-api/src/routers/: gecoding_router.py  image_asset_router.py  place_router.py  profile_router.py  recommendation_router.py  review_router.py  rule_router.py
decentraveller-api/web-api/tests/: test_places.py  test_places_search.py  test_profiles.py  test_recommender_cold_start.py  test_reviews.py  test_rules.py
decentraveller-api/web-api/tests/utils/: client.py  dependency_override.py  session.py
decentraveller-app/: .eslintrc.json  App.tsx  app.json  babel.config.js  global.ts  index.js  metro.config.js  package-lock.json  package.json  polyfills.js  tsconfig.json
decentraveller-blockchain/: .dockerignore  .gitignore  Dockerfile  README.md  hardhat.config.ts  hardhat.config2.ts  package-lock.json  package.json
decentraveller-indexer/: .dockerignore  .env  Dockerfile  package.json  (+1 more)
decentraveller-ml-api/web-api/: beauty_model.model  pyproject.toml
decentraveller-ml-api/web-api/src/: app.py
decentraveller-ml-api/web-api/src/models/: aesthetic_scorer.py
(+321 files in other folders)
