[tool.poetry]
name = "decentraveller-ml-api"
version = "0.1.0"
description = ""
authors = ["Gianmarco Cafferata <giancafferata@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
urllib3 = "1.26.0"
pandas = "<2.0.0"
tensorflow = "^2.5.0"
numpy = "<1.24"
gunicorn = "^21.2.0"
pillow = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
